# tls-from-scratch

./: CMakeLists.txt  Makefile  README.md
include/: client.hpp  encryption_hash.hpp  helper.hpp  json.hpp  server.hpp
src/: client.cpp  encryption_hash.cpp  helper.cpp  json.cpp  server.cpp
